--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+	background-color: white;
+}
+
 .container {
 	display: flex;
 	flex-flow: row wrap;
@@ -29,6 +33,7 @@ a:hover {
   border-radius: 4px;
   padding: 20px;
   margin: 12px;
+  background-color: white;
 }
 
 p {
